Fixed issue #21 : Button angled borders broken on .medium and .bigger sizes on :hover

--- a/css/alicht.css
+++ b/css/alicht.css
@@ -585,12 +585,12 @@ form input[type="submit"]:active {
 }
 .button:hover:before,
 .button:hover:after {
-    width: 15px;
+    width: 1.1em;
     background-color: #24474B;
 }
 .button:active:before,
 .button:active:after {
-    width: 15px;
+    width: 1.1em;
     background-color: #222;
     box-shadow: 0px 3px rgba(0, 0, 0, 0.3) inset;
 }
